Added more games and fixed install script

--- a/app_save_path_definitions.json
+++ b/app_save_path_definitions.json
@@ -5698,7 +5698,7 @@
         "folder": "|TBD|"
     },
     "1593500": {
-        "folder": "|TBD|"
+        "folder": "%USERPROFILE%/Saved Games/God of War"
     },
     "1624800": {
         "folder": "|TBD|"
