--- a/app_save_path_definitions.json
+++ b/app_save_path_definitions.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.3.2.0",
+    "version": "1.3.2.1",
     "USERDATA": {
         "folder": "|STEAMINSTALLDIR|/userdata"
     },
@@ -403,7 +403,7 @@
         "folder": "|NA|"
     },
     "2500": {
-        "folder": "|PATHTOGAME|/Profiles/"
+        "folder": "|PATHTOGAME|/Profiles"
     },
     "2510": {
         "folder": "|TBD|"
@@ -2434,7 +2434,7 @@
         "folder": "|TBD|"
     },
     "11360": {
-        "folder": "|PATHTOGAME|/Save/"
+        "folder": "|PATHTOGAME|/Save"
     },
     "11370": {
         "folder": "%USERPROFILE%/Documents/Nikopol"
@@ -2539,7 +2539,7 @@
         "filter": "|PATHTOGAME|/userdata/*.sav"
     },
     "12170": {
-        "folder": "|PATHTOGAME|/GTADATA/"
+        "folder": "|PATHTOGAME|/GTADATA"
     },
     "12180": {
         "folder": "|PATHTOGAME|/player"
@@ -3550,7 +3550,7 @@
         "folder": "|TBD|"
     },
     "233720": {
-        "registry": "HKEY_CURRENT_USER/Software/Bossa Studios/Surgeon Simulator 2013"
+        "registry": "HKEY_CURRENT_USER\\Software\\Bossa Studios\\Surgeon Simulator 2013"
     },
     "234140": {
         "folder": "|TBD|"
@@ -4009,10 +4009,10 @@
         "folder": "|TBD|"
     },
     "303800": {
-        "registry": "HKEY_CURRENT_USER/Software/CD Projekt RED S.A./The Witcher AG"
+        "registry": "HKEY_CURRENT_USER\\Software\\CD Projekt RED S.A.\\The Witcher AG"
     },
     "304930": {
-        "registry": "HKEY_CURRENT_USER/Software/Smartly Dressed Games/Unturned"
+        "registry": "HKEY_CURRENT_USER\\Software\\Smartly Dressed Games\\Unturned"
     },
     "305980": {
         "folder": "|TBD|"
@@ -4195,7 +4195,16 @@
         "folder": "|TBD|"
     },
     "346010": {
-        "folder": "|PATHTOGAME|/Besiege_Data"
+        "folders": [
+            {
+                "Path": "|PATHTOGAME|/Besiege_Data/SavedMachines",
+                "FriendlyName": "SavedMachines"
+            },
+            {
+                "Path": "|PATHTOGAME|/Besiege_Data/CustomLevels",
+                "FriendlyName": "CustomLevels"
+            }
+        ]
     },
     "347600": {
         "folder": "|TBD|"
